<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/arkaplan"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="303dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/action_log_out"
            android:visibility="visible"
            android:textColor="#ffffff"
            android:background="#ff0000"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/linear_layout1"
        android:layout_alignLeft="@id/linear_layout1"
        android:layout_alignEnd="@id/linear_layout1"
        android:layout_alignRight="@id/linear_layout1"
        android:layout_below="@id/linear_layout1"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/et_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/linear_layout1"
        android:layout_alignLeft="@id/linear_layout1"
        android:layout_alignEnd="@id/linear_layout1"
        android:layout_alignRight="@id/linear_layout1"
        android:layout_below="@id/et_user_name"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_display_name"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/linear_layout1"
        android:layout_alignLeft="@id/linear_layout1"
        android:layout_alignEnd="@id/linear_layout1"
        android:layout_alignRight="@id/linear_layout1"
        android:layout_below="@id/et_display_name"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_log_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignStart="@id/linear_layout1"
        android:layout_alignLeft="@id/linear_layout1"
        android:layout_alignEnd="@id/linear_layout1"
        android:layout_alignRight="@id/linear_layout1"
        android:layout_below="@id/et_password"
        android:layout_marginTop="8dp" >

        <Button
            android:id="@+id/btn_register_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/action_sign_up"
            android:textColor="#ffffff"
            android:background="#ff0000"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/action_log_in"
            android:textColor="#ffffff"
            android:background="#ff0000"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="75dp"
        android:layout_height="95dp"
        android:layout_below="@id/linear_layout2"
        android:layout_alignStart="@id/linear_layout1"
        android:layout_alignLeft="@id/linear_layout1"
        android:layout_alignEnd="@id/linear_layout1"
        android:layout_alignRight="@id/linear_layout1"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="365dp"
        android:layout_marginRight="365dp"
        android:visibility="gone" />

</RelativeLayout>
